# Autonomous_Mobile_Manipulator

./: .gitignore  ACTUATOR_CONTROL_SUMMARY.md  AUTOMATION_README.md  CONTRIBUTING.md  DEMO_RESULTS.md  FINAL_SYSTEM_STATUS.md  GPIO_SETUP_SUMMARY.md  IMU_FIX_SUMMARY.md  MODE_SELECTION.md  N8N_ROBOT_CONTROL_LIVE_SUCCESS.md  N8N_ROBOT_CONTROL_SUCCESS.md  N8N_WORKFLOWS_FULLY_EXECUTABLE.md  N8N_WORKFLOWS_READY.md  QUICK_COMMANDS.md  QUICK_IMU_TEST.md  README.md  REAL_ROBOT_HARDWARE_UPDATE.md  ROS2_RELIABILITY_README.md  ROS2_WORKSPACE_REAL_HARDWARE_UPDATES.md  RUN_SH_SUMMARY.md  STARTUP_GUIDE.md  STARTUP_SCRIPTS_UPDATE.md  SYSTEM_STARTUP_COMPLETE_SUMMARY.md  SYSTEM_STATUS.md  SYSTEM_TEST_SUCCESS.md  demo_robot_system.py  diagnose_imu.py  docker-compose.yml  final_system_demo.py  fix_n8n_workflows.sh  install_gpio_dependencies.sh  interact_with_robot.sh  manage_n8n_workflows.sh  n8n_final_demo.py  n8n_robot_control_demo.py  n8n_robot_control_workflow.json  notes.txt  ros2_log_maintenance.sh  run.sh  run_ros2_script.sh  (+17 more)
deprecated_scripts/: README.md  build_workspace.sh  launch_gazebo_gui.sh  start_hardware.sh
docker/: README.md
docs/: ARCHITECTURE_UPDATE_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_REORGANIZATION_2025-11-11.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMU_CALIBRATION_FEATURE.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  README.md  SCRIPT_CONSOLIDATION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  WEB_INTERFACE_COMPLETE_UPDATE.md  WEB_INTERFACE_CONTROLS.md  WEB_INTERFACE_PATH_PLANNING.md  project_overview.md
docs/api/: API_VERIFICATION_REPORT.md  README.md
docs/deployment/: README.md  raspberry_pi_setup.md
docs/development/: CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMU_WEB_INTEGRATION_SUMMARY.md  MPU6050_INTEGRATION_SUMMARY.md  PORTABLE_PATHS_UPDATE.md  PROXY_ARCHITECTURE_SUMMARY.md  README.md  SHARP_SENSOR_UPDATE_SUMMARY.md  WEB_INTERFACE_READY_SUMMARY.md
docs/hardware/: GPIO_ALTERNATIVE_SOLUTIONS.md  GPIO_CONTROL_SETUP.md  GPIO_PERMISSIONS_FIX.md  HARDWARE_ASSEMBLY_GUIDE.md  HARDWARE_MODE_UPDATE.md  L298N_TROUBLESHOOTING.md  MOTOR_PIN_ASSIGNMENTS.md  MOTOR_POWER_CONTROL_SOLUTION.md  MOTOR_SPECIFICATIONS.md  PG23_MOTOR_CONNECTION_GUIDE.md  PG23_MOTOR_PROTOCOL.md  PG23_MOTOR_TROUBLESHOOTING.md  RASPBERRY_PI_GPIO_SETUP.md  RASPBERRY_PI_PINOUTS.md  README.md  SENSOR_WIRING.md  gpio_test.py
docs/installation/: FIRST_RUN.md  QUICK_START.md  QUICK_START_GPIO.md  README.md  README_SETUP.md  SETUP_GUIDE.md
docs/labview-integration/: README.md
docs/software/: CONTROL_SYSTEMS.md  README.md
docs/troubleshooting/: IMU_TROUBLESHOOTING.md  README.md
docs/workflow/: CONNECTION_FIX_REPORT.md  (+2 more)
ros2_ws/: Dockerfile.dev  Dockerfile.prod  Dockerfile.rpi  cyclonedds_config.xml  dockerfile  performance_test.sh  ros2_watchdog.sh
ros2_ws/src/my_robot_automation/: API_DOCUMENTATION.md  CMakeLists.txt  GIT_RECOVERY_SUMMARY.md  MPU6050_SETUP.md  README.md  package.xml  requirements.txt
ros2_ws/src/my_robot_automation/config/: automation_config.yaml  motor_config.yaml
ros2_ws/src/my_robot_automation/launch/: automation_launch.py  development_launch.py  tf_luna_sensor.launch.py
ros2_ws/src/my_robot_automation/msg/: AutomationTask.msg  NavigationStatus.msg  RobotStatus.msg  SafetyStatus.msg  SensorData.msg  TaskStatus.msg
ros2_ws/src/my_robot_automation/my_robot_automation/: __init__.py
ros2_ws/src/my_robot_automation/scripts/: actuator_control_server.py  diagnose_l298n.py  dummy_sensor_actuator.py  emergency_stop_server.py  install_gpio_dependencies.sh  mega_serial_interface.py  mpu6050_reader.py  mqtt_bridge.py  n8n_ros2_bridge.py  navigation_status_server.py  obstacle_avoidance_server.py  patrol_server.py  pg23_motor_controller.py  pick_place_server.py  real_robot_sensor_actuator.py  real_robot_sensor_actuator_updated.py  rest_api_server.py  robot_automation_server.py  robot_controller.py  robot_status_server.py  sensor_data_server.py  sensor_simulator.py  task_management_server.py  test_fl_motor_gpio11_ena.py  test_fl_motor_in1_in2_ena.py  test_gpio.py  test_gpio_direct.py  test_gpio_output_voltage.py  test_gpio_voltage_multimeter.py  test_gpio_with_pigpio.py  test_gpiod.py  test_hardware_pwm.py  test_l298n_in1_in2_ena.py  test_l298n_motor.py  test_l298n_with_in2.py  test_motor_dedicated.py  test_motor_disable.py  test_motor_final.py  test_sharp_sensors.py  tf_luna_sensor.py  (+2 more)
ros2_ws/src/my_robot_automation/srv/: CancelTask.srv  ControlContainer.srv  ControlGripper.srv  EmergencyStop.srv  ExecuteObstacleAvoidance.srv  ExecutePatrol.srv  ExecutePickPlace.srv  GetNavigationStatus.srv  GetRobotStatus.srv  GetSensorData.srv  GetTaskStatus.srv  MoveRobot.srv  SetGripperTilt.srv  SetRobotMode.srv
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/config/: ekf.yaml  teleop_joy.yaml
ros2_ws/src/my_robot_bringup/launch/: gazebo_gui.launch.py  gazebo_simple.launch.py  gazebo_world.launch.py  manual_robot.launch.py  robot.launch.py  robot_distributed.launch.py  robot_rviz.launch.py  simple_robot.launch.py
ros2_ws/src/my_robot_bringup/my_robot_bringup/: __init__.py
ros2_ws/src/my_robot_bringup/rviz/: robot_view.rviz
ros2_ws/src/my_robot_bringup/worlds/: competition_arena.world
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/config/: controllers.yaml
ros2_ws/src/my_robot_description/urdf/: my_robot.urdf.xacro
ros2_ws/src/my_robot_manipulation/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_manipulation/config/: arm_planning_group.yaml  arm_servo.yaml  ompl_planning.yaml
ros2_ws/src/my_robot_manipulation/my_robot_manipulation/: __init__.py
ros2_ws/src/my_robot_manipulation/scripts/: gripper_controller.py  manipulation_server.py  pick_place_executor.py
ros2_ws/src/my_robot_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_navigation/config/: nav2_params.yaml
ros2_ws/src/my_robot_navigation/my_robot_navigation/: __init__.py
ros2_ws/src/my_robot_navigation/scripts/: navigation_server.py  obstacle_avoidance_executor.py  patrol_executor.py
(+84 files in other folders)
