<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for autonomous mobile manipulator</description>
  <maintainer email="1999azzar@gmail.com">1999AZZAR</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>ros_environment</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>imu_sensor_broadcaster</depend>
  <depend>laser_scan_matcher</depend>

  <!-- Navigation dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_mission_executor</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>slam_toolbox</depend>

  <!-- Manipulation dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_servo</depend>

  <!-- Perception dependencies -->
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>depth_image_proc</depend>
  <depend>laser_filters</depend>
  <depend>pointcloud_to_laserscan</depend>

  <!-- Hardware interface -->
  <depend>rplidar_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>robot_localization</depend>

  <!-- Utilities -->
  <depend>teleop_twist_keyboard</depend>
  <depend>joy</depend>
  <depend>foxglove_bridge</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
