<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_manipulation</name>
  <version>0.0.1</version>
  <description>Manipulation package for autonomous mobile manipulator using MoveIt2</description>
  <maintainer email="1999azzar@gmail.com">1999AZZAR</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_ros_benchmarks</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_ros_benchmarks</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
